fix alignment of elements to center, width of input and suggestions

--- a/public/style.css
+++ b/public/style.css
@@ -33,13 +33,11 @@ body {
     margin: var(--space-l);
     background: var(--blueberry);
     min-height: 100vh;
-    /* min-width: 100vw; */
-    /* max-width: 18rem; */
     display: flex;
-    flex-flow: column nowrap;
+    flex-direction: column;
     position: relative;
     color: whitesmoke;
-    font-family: var(--raleway);f
+    font-family: var(--raleway);
 }
 
 main {
@@ -47,11 +45,10 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
 }
 
 .searchbar {
-    width: 45vw;
+    /* width: 45vw; */
     border:0;
     padding:0;
     margin:0;
@@ -59,15 +56,14 @@ main {
 
 form {
     max-width: 100%;
+    display: flex;
+    flex-flow: row nowrap;
 }
 
 h1 {
     font-size: var(--space-xl);
     color: var(--yelliced);
-}
-
-h1:hover {
-    cursor: pointer;
+    margin-block-start: 0.2em;
 }
 
 h2 {
@@ -78,14 +74,25 @@ h2 {
     margin-block-end: var(--space-l);
 }
 
+p {
+    font-size: 2.3rem;
+    /* position: fixed; */
+    font-weight: 800;
+    color: var(--mystic);
+    margin-block-start: var(--space-l);
+}
+
 input {
     font-family: var(--raleway);
     font-size: var(--space-m);
     color: var(--blueberry);
-    /*width: 60vw;*/
+    width: 60vw;
     line-height: var(--space-m);
     cursor: text;
     vertical-align: middle;
+    display: flex;
+    justify-content: center;
+    padding-left: var(--space-s);
 }
 
 button {
@@ -112,6 +119,7 @@ ul {
     list-style-type: none;
     padding:0;
     margin:0;
+    width: 60vw;
 }
 
 li {
@@ -122,7 +130,7 @@ li {
     padding:0.5rem;
     background-color: white;
     line-height: var(--space-m);
-    curson: pointer;
+    cursor: pointer;
     color: var(--blueberry);
 }
 
@@ -133,9 +141,14 @@ li:hover {
     text-align: left;
     padding:0.5rem;
     line-height: var(--space-m);
-    curson: pointer;
+    cursor: pointer;
     color: var(--blueberry);
     background-color: var(--yelliced);
+}
+
+.country-dish {
+    display: flex;
+    justify-content: center;
 }
 
 
@@ -146,7 +159,7 @@ li:hover {
 
 h1 {
     font-size: var(--space-xxl);
-    margin-top: 10rem;
+    margin-top: var(--space-xl) ;
 } 
 
 h2 {
@@ -154,11 +167,22 @@ h2 {
     margin-block-end: var(--space-xl);
 } 
 
+p {
+    font-size: var(--space-xxl);
+}
 
 input {
-    width: 39vw;
+    /* width: 39vw; */
     line-height: var(--space-l);
-    font-size-adjust: ;
+    transform: scale(1.1);
+}
+
+.suggestions {
+    transform: scale(1.1);
+}
+
+.country-dish {
+    margin-block-start: var(--space-xl);
 }
 
 }
